--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,3 +66,14 @@ body {
 .row-reverse {
     flex-direction: row-reverse;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+    background-color: transparent !important;
+    -webkit-text-fill-color: var(--text-black) !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
