--- a/src/app/main-content/message/message.component.html
+++ b/src/app/main-content/message/message.component.html
@@ -14,9 +14,10 @@
         </div>
 
         <div *ngIf="thread == false" class="answer-date-time-container">
-            <p>{{message.createdAt}}</p>
+            <p>{{parseDate(message.createdAt)}}</p>
         </div>
         <app-message-options
+        *ngIf="threadFirstMessage == false"
         [isThread]="thread"
         [message]="message" 
         [isMessageHover]="isMessageHover" 
