--- a/src/app/main-content/message/message-text/message-text.component.html
+++ b/src/app/main-content/message/message-text/message-text.component.html
@@ -1,9 +1,15 @@
-<div class="message" (keydown)="handleKeydown($event)" *ngIf="message.message" [ngClass]="messageService.checkUser(message) ? 'myMessage' : 'memberMessage'">
+<div class="message" (keydown)="handleKeydown($event)" *ngIf="message.message"
+    [ngClass]="messageService.checkUser(message) ? 'myMessage' : 'memberMessage'">
 
-    <p class="message-text" *ngIf="isEdit == false" [ngClass]="messageService.checkUser(message) ? 'text.light' : 'text-dark'"> {{message.message}}</p>
+    <p class="message-text" *ngIf="isEdit == false" 
+        [ngClass]="messageService.checkUser(message) ? 'text-light' : 'text-dark'"
+        [innerHTML]="highlightAtTags(message.message)"></p>
+
 
     <textarea [(ngModel)]="editMessageText" *ngIf="isEdit" #textArea (input)="autoGrow()"></textarea>
 
-    <p *ngIf="isEdit" class="edit-info-text">Esc zum <span (click)="cancel()">Abbrechen</span> • Enter zum <span (click)="save()">Speichern</span></p>
-    
+    <p *ngIf="isEdit" class="edit-info-text">Esc zum <span (click)="cancel()">Abbrechen</span> • Enter zum <span
+            (click)="save()">Speichern</span></p>
+
 </div>
+
