--- a/src/app/main-content/thread/thread.component.html
+++ b/src/app/main-content/thread/thread.component.html
@@ -1,16 +1,16 @@
 <section *ngIf="threadIsOpen" @toggleThread>
     <app-thread-header class="thread-item" (closeThreadEvent)="toggleThread()"></app-thread-header>
-    <div class="main-message-container thread-item" #threadContainer>
+    <div class="main-message-container thread-item" #threadContainer (scroll)="onScroll()">
 
-        <app-message *ngIf="threadService.threadFirstMessage" [message]="threadService.threadFirstMessage" [thread]="isThread"
-            [threadFirstMessage]="isThreadFirstMessage"></app-message>
+        <app-message *ngIf="threadService.threadFirstMessage" [message]="threadService.threadFirstMessage" [thread]="isThread" 
+            [threadFirstMessage]="isThreadFirstMessage" ></app-message>
 
             <div class="between-line-container">
                 <p>{{threadService.threadMessages.length}} Antworten</p>
             <div class="between-line"></div>
             </div>
 
-        <app-message *ngFor="let msg of messages; index as i" [message]="msg" [index]="i" [thread]="isThread">
+        <app-message *ngFor="let msg of messages; index as i" [message]="msg" [index]="i" [thread]="isThread" (messageSent)="scrollToBottom()">
         </app-message>
 
     </div>
