--- a/src/app/main-content/thread/thread.component.html
+++ b/src/app/main-content/thread/thread.component.html
@@ -14,5 +14,5 @@
         </app-message>
 
     </div>
-    <app-thread-message-field class="thread-item" (messageSent)="scrollToBottom()"></app-thread-message-field>>
+    <app-thread-message-field class="thread-item" (messageSent)="scrollToBottom()"></app-thread-message-field>
 </section>
