--- a/src/app/main-content/chat/chat-message-field/images-preview/images-preview.component.scss
+++ b/src/app/main-content/chat/chat-message-field/images-preview/images-preview.component.scss
@@ -11,23 +11,22 @@
     overflow-y: hidden;
     padding-bottom: 10px;
 
-    /* Custom scrollbar styling */
     &::-webkit-scrollbar {
-      height: 6px; /* Breite der Scrollbar */
+      height: 6px; 
   }
 
   &::-webkit-scrollbar-track {
-      background-color: transparent; /* Transparenter Track */
+      background-color: transparent; 
   }
 
   &::-webkit-scrollbar-thumb {
-      background-color: var(--primary-bg); /* Farbe des Thumbs */
-      border-radius: 30px; /* Rundungen für den Thumb */
-      transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+      background-color: var(--primary-bg); 
+      border-radius: 30px; 
+      transition: background-color 0.125s ease; 
   }
 
   &::-webkit-scrollbar-thumb:hover {
-      background-color: var(--primary-bg-dark); /* Hover-Farbe des Thumbs */
+      background-color: var(--primary-bg-dark); 
       cursor: grab;
   }
    
@@ -40,6 +39,7 @@
     border-radius: 5px;
     margin-right: 20px;
     position: relative;
+    z-index: 100;
 
     img {
         width: 130px;
