--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -20,7 +20,7 @@
         <label for="file-upload" class="flie-label">
           <mat-icon class="open-file">add</mat-icon>
         </label>
-        <input id="file-upload" type="file" [(ngModel)]="imageUploads" (change)="onFileSelected($event)" multiple>
+        <input id="file-upload" type="file" (change)="onFileSelected($event)" multiple>
 
 
         <div class="between-line"></div>
