create reaction function

--- a/src/app/main-content/message/message-options/message-options.component.html
+++ b/src/app/main-content/message/message-options/message-options.component.html
@@ -1,12 +1,16 @@
 <div class="options" *ngIf="isMessageHover" [ngClass]="messageService.checkUser(message) ? '' : 'option-menu'">
   <button class="options-btn" (click)="reactionMessage('rocket')"><img src="/img/reactions/rocket.svg" alt=""></button>
   <button class="options-btn" (click)="reactionMessage('like')"><mat-icon class="like-icon"><img src="/img/reactions/like.svg" alt=""></mat-icon></button>
-  <button class="options-btn"><mat-icon class="icon">sentiment_satisfied</mat-icon></button>
+  <button class="options-btn" (click)="toggleEmojis($event)"><mat-icon class="icon">sentiment_satisfied</mat-icon></button>
   <button class="options-btn" (click)="openThread()"><mat-icon class="icon">comment</mat-icon></button>
   <button *ngIf="messageService.checkUser(message)" class="options-btn" (click)="openEditMenu()"><mat-icon class="icon">more_vert</mat-icon></button>
 
   <div class="edit-message-menu" *ngIf="isMessageEditMenuOpen">
     <button (click)="toggleEditMode()">Bearbeiten</button>
     <button (click)="handleOnDelete()">Löschen</button>
+  </div>
+
+  <div class="emojis-container" *ngIf="openEmojis">
+    <emoji-mart title="Pick your emoji…" emoji="point_up" (emojiClick)="addEmoji($event)"></emoji-mart>
   </div>
 </div>
