--- a/src/app/main-content/message/message-reation/message-reation.component.scss
+++ b/src/app/main-content/message/message-reation/message-reation.component.scss
@@ -21,6 +21,9 @@
             @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
             margin-left: 10px;
         }
+        span {
+            @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
+        }
     }
 
     .add-reaction-btn {
