--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -9,7 +9,10 @@
     </ul>
   </div>
 
-  <app-images-preview *ngIf="imagePreviews.length > 0" [imagePreviews]="imagePreviews"></app-images-preview>
+  <app-images-preview 
+  *ngIf="imagePreviews.length > 0" 
+  [imagePreviews]="imagePreviews"
+  [imageUploads]="imageUploads"></app-images-preview>
 
   <div class="message-field-container">
     <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField" (input)="onInput($event)"></textarea>
