--- a/src/app/dialog/add-members-channel/add-members-channel.component.html
+++ b/src/app/dialog/add-members-channel/add-members-channel.component.html
@@ -3,7 +3,7 @@
         <h2>Add people</h2>
         <mat-icon (click)="dialogRef.close()" class="closeIcon">close</mat-icon>
     </div>
-    <h3><mat-icon>tag</mat-icon>{{ channel?.title }}</h3>
+    <h3><mat-icon>tag</mat-icon>{{ channel.title }}</h3>
   <mat-form-field>
     <mat-chip-grid #chipGrid>
         <mat-chip-row
