--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -15,8 +15,8 @@
             } 
             @else {
                 <div class="showMemberListButtonContainer" (click)="showMembersOfChannel()">
-                    <div class="active-members-image-container" *ngFor="let img of memberService.allChannelMembers">
-                        <img style="margin-left: -10px;" src="{{img.imageUrl}}" alt="">
+                    <div class="active-members-image-container" *ngFor="let member of this.memberService.allChannelMembers">
+                        <img style="margin-left: -10px;" src="{{member.imageUrl}}" alt="">
                     </div>
                     <p>{{auth.currentChannelData?.membersId?.length}}</p>
                 </div>
