responsive thread and devspace menue behaviour fix for window width of 1285 to 1800px

--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -27,7 +27,7 @@
     color: var(--text-black);
     display: flex;
     flex-direction: column;
-    @include respond-to-maxWidth(large) {
+    @include respond-to-maxWidth('XXL') {
         max-height: 100%;
         position: absolute;
         top: 0;
@@ -51,7 +51,6 @@
         bottom: 0;
         z-index: 3;
         border-radius: 0px;
-
     }
 }
 
