--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -9,6 +9,7 @@
     </app-devspace>
     <div class="main-content-wrapper">
         <app-chat [ngClass]="{
+            'flexUnset': threadIsOpen,
             'focus-app': chatAsTopLayer, 
             'hidden': threadAsTopLayer
             }"
